# SimpleGui

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
Examples/: main_1_inst_windows.c  main_2_inst_windows.c  main_3_inst_windows.c
Headers/: create_entities.h  easylogs.h  instance.h  properties.h  simple_gui.h  window_manage.h
Headers/Modules/: buffer.h  dropdown.h  mouse.h
Sources/: main.c
Sources/Init/: create_entities.c  init_mask.c
Sources/Instances/: active_windows.c  delete.c  pop_window.c  push_back.c  window_manage.c  window_split.c  windows_add.c
Sources/Properties/: states.c
Sources/Windows/: active_windows.c  head.c
Sources/Windows/Buffer/: buffer_actions.c  buffer_appends.c  buffer_flush.c  buffer_misc.c  buffer_scroll.c  buffer_write.c  create.c
Sources/Windows/Dropdown/: dropdown_manage.c
Sources/Windows/Mouse/: mouse_events.c
